[tool.poetry]
name = "fastapi-geolocation"
version = "0.1.0"
description = ""
authors = ["Wellington <juniozguedes@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_geolocation"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.45"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.10.2"}
fastapi-jwt-auth = "^0.5.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
